<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/et_username"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="284dp"
        android:background="@drawable/edit_select"
        android:hint="@string/username"
        android:inputType="textUri|textMultiLine"
        android:textSize="@dimen/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/edit_select"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/login_text"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:textSize="@dimen/login_text"
        app:layout_constraintBottom_toBottomOf="@+id/bt_exit"
        app:layout_constraintEnd_toStartOf="@+id/tv_register"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/exit"
        android:textSize="@dimen/login_text"
        app:layout_constraintStart_toEndOf="@+id/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/noregister"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/bt_exit" />
</android.support.constraint.ConstraintLayout>