<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="238dp"
        android:layout_height="288dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:text="@string/register"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bt_fg_back"
            android:layout_marginTop="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_edit_delete"
            />
        <EditText
            android:id="@+id/et_fg_username"
            android:background="@drawable/edit_select"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="70dp"
            android:hint="@string/username"
            android:inputType="textUri|textMultiLine"
            android:textSize="@dimen/login_text" />

        <EditText
            android:id="@+id/et_fg_password"
            android:background="@drawable/edit_select"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/et_fg_username"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textUri|textMultiLine|textPassword"
            android:textSize="@dimen/login_text" />

        <EditText
            android:background="@drawable/edit_select"
            android:id="@+id/et_fg_repassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/et_fg_password"
            android:layout_marginTop="5dp"
            android:hint="@string/repassword"
            android:inputType="textUri|textMultiLine|textPassword"
            android:textSize="@dimen/login_text" />

        <Button
            android:id="@+id/bt_fg_register"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/et_fg_repassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_register_bt"
            android:textSize="@dimen/login_text"
            android:text="@string/register"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>